# fake-https-server

./: .typos.toml  Makefile  README.md  REUSE.toml  pyproject.toml  ruff.toml
.github/workflows/: action-lint.yml  action-security.yml  license-copyright.yml  markdown-lint.yml  python-format.yml  python-lint.yml  python-release.yml  python-tests.yml  spell-lint.yml
LICENSES/: MIT.txt
src/fake_https_server/: __init__.py  request.py  server.py
tests/: conftest.py  test_request.py  test_server.py
tests/contents/: large.html
