# SPDX-FileCopyrightText: Copyright (C) 2025-2026 Fabrício Barros Cabral
# SPDX-License-Identifier: MIT

[project]
name = "fake-https-server"
version = "0.0.12"
description = "Fake http and https servers"
authors = [{ name = "Fabrício Barros Cabral", email = "fabriciofx@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = ["fake", "mock", "http", "https", "server", "request"]
dependencies = ["random-port>=0.0.9"]

[project.urls]
homepage = "https://github.com/fabriciofx/fake-https-server"
bug-tracker = "https://github.com/fabriciofx/fake-https-server/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-n auto"

[dependency-groups]
dev = ["pytest-xdist>=3.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fake_https_server" = ["py.typed"]
